@@ -556,7 +556,7 @@ PREAMBLE_LY = r'''%%%% Generated by %(program_name)s
 				p (scorify-music m p))))
 
 #(ly:set-option (quote no-point-and-click))
-
+#(define inside-lilypond-book #t)
 #(define version-seen? #t)
 %(preamble_string)s
 
@@ -693,9 +693,13 @@ class Substring (Chunk):
 		self.start = start
 		self.end = end
 		self.line_number = line_number
+		self.override_text = None
 
 	def replacement_text (self):
-		return self.source[self.start:self.end]
+		if self.override_text:
+			return self.override_text
+		else:
+			return self.source[self.start:self.end]
 
 class Snippet (Chunk):
 	def __init__ (self, type, match, format, line_number):
@@ -1319,6 +1323,18 @@ def get_latex_textwidth (source):
 
 	return textwidth
 
+def modify_preamble (chunk):
+	str = chunk.replacement_text ()
+	if (re.search (r"\\begin{document}", str)
+	    and not re.search ("{graphic[sx]", str)):
+		str = re.sub (r"\\begin{document}",
+			      r"\\RequirePackage{graphics}" + '\n'
+			      + r"\\begin{document}",
+			      str)
+		chunk.override_text = str 
+		
+	
+
 ext2format = {
 	'.html': HTML,
 	'.itely': TEXINFO,
@@ -1481,6 +1497,11 @@ def do_file (input_filename):
 		)
 		ly.progress (_ ("Dissecting..."))
 		chunks = find_toplevel_snippets (source, snippet_types)
+
+		if format == LATEX: 
+			modify_preamble (chunks[0])
+			
+		
 		ly.progress ('\n')
 
 		if filter_cmd:
